# zchat-ng

./: .gitignore  AGENT_SETUP.md  CLAUDE.md  README.md  claude.sh  pyproject.toml  skills-lock.json  update-from-template.sh  zchat.md
.claude/: .template-version  settings.json
.claude/hooks/: agent-setup.sh  enforce-tools.sh  inject-superpowers.sh
.claude/skills/env-setup/: SKILL.md
configs/templates/: coder.toml
docs/: README.md
docs/design/v0.0.5.1/: 01-overview.md  03-com.md  05-cli.md  06-tui.md  08-dev-phases.md  09-mvp-implementation.md
docs/design/v0.0.6.3/: 05-acp.md  06-extension.md  07-tui.md  08-e2e-scenarios.md  09-dev-phases.md  11-mvp-testcases.md
docs/superpowers/plans/: 2026-03-15-file-script-backends.md
docs/superpowers/specs/: 2026-03-15-file-script-backends-design.md
docs/v0.0.5.1/: 02-protocol.md  03-com.md  04-acp.md  06-tui.md  07-e2e-scenarios.md  10-mvp-testcases.md  README.md
docs/v0.0.6.3/: 01-overview.md  02-cli.md  03-protocol.md  04-com.md  10-mvp-implementation.md  README.md  zchat.md
scripts/: echo-agent.sh
tests/test_acp/: test_script_backend.py
tests/test_cli/: conftest.py  test_ask.py  test_backends_protocol.py  test_rooms.py  test_send.py  test_session.py  test_spawn.py  test_status.py  test_watch.py
tests/test_com/: test_file_backend.py
tests/test_e2e/: test_multiuser.py  test_smoke.py
tests/test_protocol/: test_config.py  test_content_type.py  test_extension_manifest.py  test_identity.py  test_index.py  test_view.py  test_zchat_event.py
